First chunk of site 2.0 updates.

--- a/RVFS/RVFS/templates/registration/login.html
+++ b/RVFS/RVFS/templates/registration/login.html
@@ -8,5 +8,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <input class="button" type="submit" value="Login">
+    <a href="{% url 'password_reset' %}">Forgot Password?</a>
   </form>
 {% endblock %}
