--- a/RVFS/catalog/templates/create_product.html
+++ b/RVFS/catalog/templates/create_product.html
@@ -12,10 +12,13 @@
             <div class="col">
             <h4 class="text-standard">{{ field.label }}:</h4>
             <p class="textarea-form">{{ field }}</p>
-            {% elif forloop.counter == 9 %}
+            {% elif forloop.counter == 10 %}
             </div>
             <div class="col">
             <h4 class="text-standard">{{ field.label }}:</h4>
+            <p class="textarea-form">{{ field }}</p>
+            {% elif field.label == 'Tags' %}
+            <h4 class="text-standard">Catagories:</h4>
             <p class="textarea-form">{{ field }}</p>
             {% else %}
             <h4 class="text-standard">{{ field.label }}:</h4>
