Part two of 2.0 updates.

--- a/RVFS/catalog/templates/create_product.html
+++ b/RVFS/catalog/templates/create_product.html
@@ -27,6 +27,6 @@
         {% endfor %}
         </div>
         </div>
-        <input class="button text-standard" type="submit" value="Create">
+        <input class="btn btn-secondary text-standard" type="submit" value="Create">
     </form>
 {% endblock %}
