--- a/RVFS/catalog/templates/services.html
+++ b/RVFS/catalog/templates/services.html
@@ -7,7 +7,7 @@
 {% block body %}
     <h1 class="text-standard text-center">Services:</h1>
     {% for serv in servs %}
-    <div class="row service">
+    <div class="row service galleries-row">
         <div class="col-6">
             <img class="serv-image" src="{{ serv.image.url }}" max-height="150px">
         </div>
