--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -39,6 +39,13 @@
               </div>
             </div>
             <div class="col">
+              {% if user.is_staff %}
+              <ul class="nav navbar-nav justify-content-end">
+                <li class="nav-item text-standard {% if nbar == 'add_prod' %}active{% endif %}"><a class="nav-link staff-nav" href="{% url 'add_prod' %}">Add Product</a></li>
+                <li class="nav-item text-standard {% if nbar == 'add_serv' %}active{% endif %}"><a class="nav-link staff-nav" href="{% url 'add_serv' %}">Add Service</a></li>
+                <li class="nav-item text-standard"><a class="nav-link staff-nav" href="{% url 'update' %}">Update Slides</a></li>
+                <li class="nav-item text-standard"><a class="nav-link staff-nav" href="{% url 'update' %}">Update Mailing List</a></li>
+              {% else %}
               <ul class="info banner-text">
                 <li>
                   <p class="text-standard">Muninn@ravenvfm.com</p>
@@ -61,12 +68,14 @@
                   <a href="https://www.instagram.com/m.ravenmoore/"><img class="nav-social" src="{% static 'insta.png' %}"></a>
                 </li>
                 <li>
+                  {% if not user.is_authenticated %}
                   <form id="newsletter">
-                    {% csrf_token %}
                     <input class="newsletter" type="text" name="newsletter" placeholder="Newsletter">
                     <input class="btn btn-secondary" type="submit" value="Sign up!">
                   </form>
+                  {% endif %}
                 </li>
+              {% endif %}
               </ul>
             </div>
           <div class="w-100 menus">
@@ -93,17 +102,17 @@
                 <li class="nav-item text-standard {% if nbar == 'prods' %}active{% endif %}"><a class="nav-link" href="{% url 'prods' %}">Products</a></li>
                 <li class="nav-item text-standard {% if nbar == 'servs' %}active{% endif %}"><a class="nav-link" href="{% url 'servs' %}">Services</a></li>
                 <li class="nav-item text-standard dropdown {% if nbar == 'gallery' %}active{% endif %}">
-                  <a class="nav-link dropdown-toggle" id="dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-target="#nav-drop" aria-controls="#nav-drop" href="#" role="button">Galleries</a>
+                  <a class="nav-link dropdown-toggle {% if nbar == 'galleries' %}active{% endif %}" id="dropdown" aria-haspopup="true" aria-expanded="false"  href="{% url 'galleries' %}" role="button">Galleries</a>
                   <div class="dropdown-menu" aria-labelledby="dropdown">
                   {% for gallery in galleries %}
                     {% if tab %}
                       {% if tab == gallery.name %}
-                        <a class="dropdown-item text-standard active" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
+                        <a class="dropdown-item text-standard dropdown active" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
                       {% else %}
-                      <a class="dropdown-item text-standard" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
+                        <a class="dropdown-item dropdown text-standard" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
                       {% endif %}
                     {% else %}
-                    <a class="dropdown-item text-standard" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
+                    <a class="dropdown-item dropdown text-standard" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
                     {% endif %}
                   {% endfor %}
                   </div>
@@ -129,12 +138,9 @@
             <div class="w-100">
               <div id="collapse-right" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav ml-auto">
-                  <li class="nav-item text-standard {% if nbar == 'add_prod' %}active{% endif %}"><a class="nav-link" href="{% url 'add_prod' %}">Add Product</a></li>
-                  <li class="nav-item text-standard {% if nbar == 'add_serv' %}active{% endif %}"><a class="nav-link" href="{% url 'add_serv' %}">Add Service</a></li>
                   <li class="nav-item text-standard {% if nbar == 'list' %}active{% endif %}"><a class="nav-link" href="{% url 'list' %}">Items</a></li>
                   <li class="nav-item text-standard {% if nbar == 'order' %}active{% endif %}"><a class="nav-link" href="{% url 'orders' %}">Orders</a></li>
                   <li class="nav-item text-standard {% if nbar == 'users' %}active{% endif %}"><a class="nav-link" href="{% url 'users' %}">Users</a></li>
-                  <li class="nav-item text-standard"><a class="nav-link" href="{% url 'update' %}">Update Slides</a></li>
                 {% if user.is_superuser %}
                   <li class="nav-item text-standard"><a class="nav-link" href="{% url 'admin:login' %}">Admin</a></li>
                 {% endif %}
