--- a/RVFS/catalog/templates/create_service.html
+++ b/RVFS/catalog/templates/create_service.html
@@ -12,7 +12,7 @@
                 <div class="col">
                 <h4 class="text-standard">{{ field.label }}:</h4>
                 <p class="textarea-form">{{ field }}</p>
-                {% elif forloop.counter == 11 %}
+                {% elif forloop.counter == 8 %}
                 </div>
                 <div class="col">
                 <h4 class="text-standard">{{ field.label }}:</h4>
@@ -27,6 +27,6 @@
             {% endfor %}
             </div>
         </div>
-        <input class="button text-standard" type="submit" value="Create">
+        <input class="btn btn-secondary text-standard" type="submit" value="Create">
     </form>
 {% endblock %}
