--- a/RVFS/catalog/templates/quote.html
+++ b/RVFS/catalog/templates/quote.html
@@ -4,28 +4,25 @@
 {% block body %}
 <form enctype="multipart/form-data" class="contact-form" method="post">
     {% csrf_token %}
+    <h1 class="text-standard">Request a Service</h1>
     <div class="row">
         <div class="col">
-            <h1 class="text-standard">Request a Service</h1>
             {% for field in form %}
-            <h4 class="text-standard">{{ field.label }}</h4>
+            {% if forloop.counter == 7 %}
+            </div>
+            <div class="col">
+            <h4 class="text-standard">{{ field.label }}:</h4>
             <p class="text-standard">{{ field }}</p>
+            {% else %}
+            <h4 class="text-standard">{{ field.label }}:</h4>
+            <p class="text-standard">{{ field }}</p>
+            {% endif %}
             {% endfor %}
-            <button class="btn btn-secondary text-standard" type="submit">Submit Request</button>
-        </div>
-        <div class="col">
-            <iframe
-              width="400"
-              height="300"
-              frameborder="0" style="border:0"
-              src="https://www.google.com/maps/embed/v1/place?key={{ api }}
-                &q=11639+13th+Ave+SW,Burien+WA">
-            </iframe>
-            <h4 class="text-standard">Shop Hours:</h4>
-            <p class="text-standard">Tues.-Sat. 10AM-8PM</p>
         </div>
     </div>
     <div class="w-100">
+        <button class="d-flex ml-auto btn btn-secondary text-standard" type="submit">Submit Request</button>
+        <br>
         <p class="text-standard">*By submitting this form you are consenting to be contacted by Ravenmoore Valley Forge for the ppurposes of establishing a baseline and confirming the details around the requested service. This is in no way a gaurentee that services will be rendered and the company withholds the right to terminate service at any point.</p>
     </div>
 </form>
