Discount, error page, and newsletter updates.

--- a/RVFS/RVFS/templates/password_reset/change_password.html
+++ b/RVFS/RVFS/templates/password_reset/change_password.html
@@ -8,7 +8,9 @@ Change Password
   <h3>Change password</h3>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% for field in form %}
+    <p class="text-standard">{{ field.label }}: {{ field }}</p>
+    {% endfor %}
     <button class="btn btn-secondary" type="submit">Change password</button>
   </form>
 {% endblock %}
