--- a/RVFS/account/templates/info-form.html
+++ b/RVFS/account/templates/info-form.html
@@ -9,6 +9,8 @@
     {% for field in form %}
         <p class="form-font"><label class="text-standard">{{ field.label }}:</label><br>{{ field }}</p>
     {% endfor %}
+    <p class="text-standard">Sign up for our news letter?  <input type="checkbox" name="newsletter"></p>
+    <p class="text-standard">You can opt in or out later from your account.</p>
     <input class="btn btn-secondary text-standard" type="submit" value="Login*">
     <p class="disclaimer text-standard">*By submitting this form you verify and consent to the unserstanding that you are above the age of 18, this verification is required for the purchase of knives from this site as they are weapons and physical harm may result from the improper use of these tools.</p>
   </form>
