--- a/RVFS/RVFS/templates/password_reset/password_reset_confirm.html
+++ b/RVFS/RVFS/templates/password_reset/password_reset_confirm.html
@@ -9,11 +9,13 @@ Password Reset Confirm
     <h3>Change password</h3>
     <form method="post">
       {% csrf_token %}
-      {{ form.as_p }}
+      {% for field in form %}
+      <p class="text-standard">{{ field.label }}: {{ field }}</p>
+      {% endfor %}
       <button class="btn btn-secondary" type="submit">Change password</button>
     </form>
   {% else %}
-    <p>
+    <p class="text-standard">
       The password reset link was invalid, possibly because it has already been used.
       Please request a new password reset.
     </p>
