--- a/RVFS/RVFS/templates/registration/registration_complete.html
+++ b/RVFS/RVFS/templates/registration/registration_complete.html
@@ -1,6 +1,14 @@
 {% extends 'rvfsite/base.html' %}
+
+{% block title %}
+Registration Complete
+{% endblock %}
+
 {% block body %}
 <div class="registration">
-    <p>Check your email for the account activation link we sent you.</p>
+    <div class="placeholder-md"></div>
+    <p class="text-standard">Check your email for the account activation link we have sent you.</p>
+    <p class="text-standard">This may take a few minutes to arrive so please be patient.</p>
+    <div class="placeholder-md"></div>
 </div>
 {% endblock %}
