--- a/RVFS/RVFS/templates/registration/registration_form.html
+++ b/RVFS/RVFS/templates/registration/registration_form.html
@@ -1,4 +1,9 @@
 {% extends 'rvfsite/base.html' %}
+
+{% block title %}
+Registrater
+{% endblock %}
+
 {% block body %}
   <div class="register">
     <h2>Get an Account</h2>
