--- a/RVFS/RVFS/templates/rvfsite/unsub.html
+++ b/RVFS/RVFS/templates/rvfsite/unsub.html
@@ -1,13 +1,14 @@
 {% extends 'rvfsite/base.html' %}
 
 {% block title %}
-Activation Complete
+Newsletter Opt Out
 {% endblock %}
 
 {% block body %}
 <div class="registration">
     <div class="placeholder-md"></div>
-    <p class="text-standard">Your account has been registered go have fun!</p>
+    <p class="text-standard">Your are no longer on the newsletter mailing list.</p>
+    <p class="text-standard">We will miss you and hope you join again.</p>
     <div class="placeholder-md"></div>
 </div>
 {% endblock %}
